add web version

--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,8 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
+  <meta name="google-signin-client_id" content="258703844149-lne4dqmqbts9uf0e70jjedo8455i22mu.apps.googleusercontent.com" />
+
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
