--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,7 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
-
+<script src="https://cdn.jsdelivr.net/npm/universal-file-saver@1.0.0/dist/FileSaver.min.js"></script>
   <title>expense_tracker</title>
   <link rel="manifest" href="manifest.json">
 </head>
